syntax = "proto3";
package chali;

message Block {
    string hash = 1;
    string prevBlockHash = 2;
    string data = 3;
}

message AddBlockRequest {
    string data = 1;    
}

message AddBlockResponse {
    string hash = 1;
}

message GetBlockchainRequest {}

message GetBlockchainResponse {
    repeated Block blocks = 1;
}

service Blockchain {
    rpc AddBlock (AddBlockRequest) returns (AddBlockResponse) {}
    rpc GetBlockchain (GetBlockchainRequest) returns (GetBlockchainResponse) {}
}